@@ -30,7 +30,7 @@ document.addEventListener( 'DOMContentLoaded', () => {
 </script>
 <body>
 
-<h1 id="aimattackimprovementmod21development">AIM - Attack Improvement Mod 2.1 </h1>
+<h1 id="aimattackimprovementmod21development">AIM - Attack Improvement Mod 2.1.1 </h1>
 
 <p>For BATTLETECH 1.1.2</p>
 
@@ -164,7 +164,7 @@ document.addEventListener( 'DOMContentLoaded', () => {
 Rename your old <code>mod.json</code> to <code>settings.json</code> to keep old settings.</p>
 
 <ol>
-<li><a href="https://github.com/Mpstark/ModTek/wiki/The-Drop-Dead-Simple-Guide-to-Installing-BTML-&amp;-ModTek-&amp;-ModTek-mods">Install BTML and ModTek.</a></li>
+<li>Install <a href="https://github.com/janxious/ModTek/wiki/The-Drop-Dead-Simple-Guide-to-Installing-BTML-&amp;-ModTek-&amp;-ModTek-mods">BTML and ModTek</a>.</li>
 
 <li><a href="https://github.com/Sheep-y/Attack-Improvement-Mod/releases">Download this mod</a>, extract in the mod folder. i.e. You should see <code>BATTLETECH\Mods\AttackImprovementMod\mod.json</code></li>
 
