@@ -2,7 +2,7 @@
    "Name" : "AIM: Attack Improvement Mod",
    "Enabled" : true,
 
-   "Version" : "2.2 development",
+   "Version" : "2.1.1",
    "Description" : "Fix, enhance, and upgrade various aspects of attacking, from Line of Sight to Hit Distribution. Each feature can be configured individually.",
    "Author" : "Sheepy",
    "Website" : "https://github.com/Sheep-y/Attack-Improvement-Mod/",
